--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
   </main>
 
-  <!-- <footer>
+  <footer>
     <div class="footer__followUsIcon">
       <h4>Follow us</h4>
       <ul>
@@ -244,7 +244,7 @@
     <div class="footer__copyRight">
       <p>&copy;ZAPPALLAS,&nbsp;INC.&nbsp;2017</p>
     </div>
-  </footer> -->
+  </footer>
 
     <script>
 
