--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 <div class="container">
     <header class="fes_2018">
-        <h1><span>累計総動員数18,000人</span>日本最大級の占いイベント</h1>
+        <h1><span>日本最大級の占いイベント</span>第3回は2018新春！</h1>
     
         <div class="headerBtn" style="display: none;">
           <div class="headerBtn__open">
